# src/controller/booking.controller.js
@@ -2,11 +2,10 @@ const express = require("express");
 const router = express.Router();
 const axios = require("axios");
 const auth = require("../middleware/auth");
-const { createBooking, cancelBooking, viewBooking, insertSchedule, loadSchedule } = require("../service/booking.service");
+const { createBooking, cancelBooking, viewBooking, insertSchedule, loadSchedule, viewMyBooking } = require("../service/booking.service");
 
 router.post("/", auth, (req, res) => {
   // console.log(`user>>>>${JSON.stringify(req.user)}`);
-  const { userInfo } = req.user;
   createBooking(req.body, req.user, (error, result) => {
     if (result) {
       res.status(201).send(result);
@@ -36,23 +35,31 @@ router.put("/", auth, (req, res) => {
 })
 //View Bookings by Clinic Admin/Clinic User of their clinic on a particular date
 router.get("/:given_date", auth, (req, res) => {
-  getUserInfo(res, (error, result) => {
+  // console.log(req.user);
+  viewBooking(req.query, req.params, req.user, (error, result) => {
     if (result) {
-      const userInfo = result.data;
-      viewBooking(req.query, req.params, userInfo, (error, result) => {
-        if (result) {
-          res.send(result);
-        }
-        else {
-          res.status(400).send(error);
-        }
-      })
-    } else {
-      console.log(`Error::${error}`);
-      res.status(403).send(error);
+      res.send(result);
+    }
+    else {
+      res.status(400).send(error);
     }
   })
 });
+// View My Bookings (for Patients)
+router.get("/viewBooking/:user_id", auth, (req, res) => {
+  // console.log(`${req.user.email_id}`);
+  if (req.user.email_id === req.params.user_id) {
+    viewMyBooking(req.params, (error, result) => {
+      if (error) {
+        res.status(400).send(error);
+      }
+      res.status(200).send(result);
+    })
+  } else {
+    console.log(`View My Booking Error::${error}`);
+    res.status(403).send(error);
+  }
+})
 
 router.get("/load/loadSchedule/:clinic_id/:given_date", (req, res) => {
   loadSchedule(req.params, (error, result) => {
@@ -80,9 +87,7 @@ router.post("/createSchedule/:clinic_id/:doctor_id/:load_date", (req, res) => {
       })
     } else {
       console.log(`Error:${error}`);
-
     }
-
   })
 })
 
